user avatar image cropper fixed (#306)

--- a/frontend/src/app/modules/user/profile-edit-form/profile-edit-form.component.sass
+++ b/frontend/src/app/modules/user/profile-edit-form/profile-edit-form.component.sass
@@ -125,3 +125,6 @@ form
 
 .white
     color: white !important
+
+.app-crop-image ::ng-deep app-crop-image .bg-modal-fader
+    height: 100vh
